# zuul-jobs-board

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini  zjb.yml
.github/workflows/: main.yml
deployment/: inventory.ini  run.sh  tasks.yml
deployment/files/: index.html  motd  nginx.conf  supervisord.conf.j2  supervisord.service  zjb.yml
deployment/group_vars/: all
zjb/: cli.py  config.py  db.py  puller.py  server.py  utils.py  zuul.py
zjb/static/: details.css  filtering.js  footer.css  functions.js  header.css  layout.css  nav.css  notes.css  notes.js  overlay.css  overlay.js  results.css  toast.css  toast.js  views.css
zjb/templates/: base.html.j2  details-form.html.j2  details.html.j2  index.html.j2  notes.html.j2  results.html.j2
