[metadata]
name = zjb
description_file = README.md
home_page = https://github.com/sdatko/zuul-jobs-board
author = Szymon Datko
author_email = szymon.datko@gmail.com
maintainer = Szymon Datko
maintainer_email = szymon.datko@gmail.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    zjb

[entry_points]
console_scripts =
    zjb = zjb.cli:main

[package_data]
zjb =
    zjb/templates/*

[egg_info]
egg_base = .

[bdist_wheel]
universal = 1

[pbr]
warnerrors = true
